# brain-helper

./: .gitignore  Cargo.toml  application.yml.example  config.example.yaml  pyproject.toml
crates/api/: Cargo.toml
crates/api/src/: brain_api.rs  constant.rs  lib.rs  middleware.rs  objects.rs  parameter.rs  session.rs  utils.rs
crates/api/src/response/: auth.rs  datafield.rs  dataset.rs  mod.rs  operator.rs  simulation.rs
crates/app/: Cargo.toml  pyproject.toml
crates/app/pysrc/brain_helper/: __init__.py  brain_helper.pyi
crates/app/src/: app.rs  brain_app.rs  lib.rs  main.rs  mcp.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: logger.rs
crates/common/src/config/: datasource.rs  mod.rs
crates/database/: Cargo.toml
crates/database/src/: alpha_dao.rs  database.rs  entity.rs  lib.rs
docs/: how_brain_works.ipynb  how_to_use.ipynb
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: login-form.jsx
frontend/src/lib/: api.js
frontend/src/pages/: LoginPage.jsx
frontend/src/services/: userService.js
mcp/: server.py
src/ace_lib/: __init__.py  ace_lib.py
src/brain/: __init__.py  api.py  app.py  chart.py  database.py  logger_util.py  utils.py
src/brain/database/: __init__.py  alpha_dao.py  investability_constrained_dao.py  is_stats_dao.py  risk_neutralized_dao.py  year_stats_dao.py
