[workspace]
resolver = "3"
members = ["crates/api", "crates/app", "crates/common", "crates/database"]

[workspace.dependencies]
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
reqwest-middleware = { version = "0.5.1", features = ["json", "query"]}
http = "1.4.0"
tokio = { version = "1.51.1", features = ["full"] }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rpassword = "7.4.0"
indicatif = "0.18.4"
futures = "0.3.32"
chrono = "0.4.44"
chrono-tz = "0.10.4"
config ={ version = "0.15.22", features = ["yaml"] }
toasty = { version = "0.3.0", features = ["postgresql", "jiff", "rust_decimal"] }
jiff = "0.2.23"
rust_decimal = "1.41.0"
rmcp = { version = "1.3.0", features = ["server", "macros", "transport-io"] }
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pythonize = "0.28.0"