[package]
name = "brain-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rpassword = { workspace = true }
indicatif = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }