[package]
name = "brain-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "brain-mcp"
path = "src/mcp.rs"

[dependencies]
brain-common = { path = "../common" }
brain-api = { path = "../api" }
brain-database = { path = "../database" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jiff = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
